--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "https://twitter.com/Zizzamia",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.9.9",
     "@coinbase/onchainkit": "0.11.0",
     "@vercel/og": "^0.6.2",
+    "graphql": "^16.8.1",
     "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
